Fix race between G1PeriodicGCTask checks and GC request

XMLWordPrintable

    • gc
    • b10

      The G1PeriodicGCTask performs various checks to determine whether a periodic GC should be performed. Even if all those tests are performed in a context where a GC cannot be running concurrently (JDK-8271215, executing the checks in an STS-joiner), there is still a race between the end of that checking and the actual request via try_collect. This can be addressed by capturing the GC counters as part of that checking context and passing them to try_collect for use by the VMOp.

            Assignee:
            Kim Barrett
            Reporter:
            Kim Barrett
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: