8271217: Fix race between G1PeriodicGCTask checks and GC request

Reviewed-by: iwalulya, tschatzl, lkorinth